# SIMD-Mandelbrot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ico/: app.rc
include/: Application.h  Color.h  Framebuffer.h  Mandelbrot.h  Threadpool.h
src/: Application.cpp  Framebuffer.cpp  Mandelbrot.cpp  Threadpool.cpp  main.cpp
tests/: Framebuffer_Tests.h  RunTests.cpp  SIMD_Tests.h  Threadpool_Tests.h
